--- a/[E-16] Movie SBR.ipynb
+++ b/[E-16] Movie SBR.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e4ffd2e",
+   "id": "571173a1",
    "metadata": {},
    "source": [
-    "# [E-16] Movie_Recommendation\n",
-    "\n"
+    "# [E-16] Movie SBR\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbad157d",
+   "id": "d7d42c70",
    "metadata": {},
    "source": [
     "라이브러리 가져오기"
@@ -20,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ffd7621",
+   "id": "3bb471ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a55b5c",
+   "id": "350120d2",
    "metadata": {},
    "source": [
     "## **Step 1. 데이터의 전처리**\n",
@@ -50,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d642b98",
+   "id": "0dd76711",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0235a9",
+   "id": "96d7cb34",
    "metadata": {},
    "source": [
     "pandas 출력 포맷팅"
@@ -214,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "742b9246",
+   "id": "4c7886df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fbb48f4b",
+   "id": "643cdf16",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "935d3821",
+   "id": "e8555314",
    "metadata": {
     "scrolled": true
    },
@@ -368,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc6c06f",
+   "id": "75bcd588",
    "metadata": {},
    "source": [
     "### 1.1 기본 분석 : 유저수, item값 확인"
@@ -377,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "700bc2cb",
+   "id": "ca47ee54",
    "metadata": {
     "scrolled": false
    },
@@ -398,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da81d843",
+   "id": "15a3433e",
    "metadata": {},
    "source": [
     "### 1.2 userid length"
@@ -406,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee63dc2",
+   "id": "3035903b",
    "metadata": {},
    "source": [
     "userid의 크기 확인"
@@ -415,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0a5d73c2",
+   "id": "039e44ed",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f05cca",
+   "id": "d1556178",
    "metadata": {},
    "source": [
     "userid의 통계값"
@@ -457,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f909ee5f",
+   "id": "faf392ea",
    "metadata": {
     "scrolled": true
    },
@@ -488,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4f23c4f4",
+   "id": "27766162",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e6d0753d",
+   "id": "56671215",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45b7a857",
+   "id": "a156a9a6",
    "metadata": {},
    "source": [
     "세션 길이 기준 하위 99%까지의 분포 누적합, 시각화"
@@ -730,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "429ae26b",
+   "id": "2cde9061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8921ba80",
+   "id": "7ea1bcdf",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3e4d862",
+   "id": "cdfc9d23",
    "metadata": {},
    "source": [
     "boxplot 그리기"
@@ -781,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c1ff8f16",
+   "id": "0ba5e680",
    "metadata": {
     "scrolled": false
    },
@@ -807,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bc843a",
+   "id": "34d7794e",
    "metadata": {},
    "source": [
     "### 1.3 time"
@@ -816,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "24be5069",
+   "id": "ee50f620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7de246ce",
+   "id": "160fb03c",
    "metadata": {
     "scrolled": true
    },
@@ -850,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "56751d63",
+   "id": "5c328884",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69cba00",
+   "id": "1928c487",
    "metadata": {},
    "source": [
     "### 1.4 Cleaning"
@@ -878,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f32d6170",
+   "id": "d891f140",
    "metadata": {},
    "source": [
     "userid의 길이가 작은 데이터 제거 함수 구현"
@@ -887,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f917fa49",
+   "id": "51f91167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013f78a3",
+   "id": "f71c2574",
    "metadata": {},
    "source": [
     "데이터 정리"
@@ -929,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a9343a46",
+   "id": "40eceac8",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f75331bb",
+   "id": "2a922330",
    "metadata": {},
    "source": [
     "## Step 2. 미니 배치의 구성\n",
@@ -1082,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d18f8bc",
+   "id": "c462eb4e",
    "metadata": {},
    "source": [
     "### 2.1 Train / Valid / Test split\n",
@@ -1093,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c890118d",
+   "id": "19105578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f3822ba7",
+   "id": "240ef890",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0d96f279",
+   "id": "2311fcf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,7 +1130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4fbf28",
+   "id": "15b90b36",
    "metadata": {},
    "source": [
     "분리된 데이터 정보 보기"
@@ -1140,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "523e921b",
+   "id": "1637a2f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "75b8702e",
+   "id": "63ca3216",
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8983918",
+   "id": "ba4cebe0",
    "metadata": {},
    "source": [
     "인덱싱"
@@ -1205,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9308637d",
+   "id": "e81f6707",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea50858",
+   "id": "faed242f",
    "metadata": {},
    "source": [
     "데이터셋 pickle로 저장하기"
@@ -1232,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "468dee7c",
+   "id": "1da7424c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04277584",
+   "id": "e4fbee47",
    "metadata": {},
    "source": [
     "### 2.2 SessionDataset"
@@ -1255,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7ff80b1e",
+   "id": "342a2d0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3b72ccb4",
+   "id": "9889e7f4",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "49802338",
+   "id": "06b8706e",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1442,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "784838d7",
+   "id": "113af5c7",
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6cef3c3",
+   "id": "ac9152d2",
    "metadata": {},
    "source": [
     "### 2.3 SessionDataLoader"
@@ -1472,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "02465ab2",
+   "id": "24909abb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "72f74b38",
+   "id": "c7a67bfc",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f69a5825",
+   "id": "bf051f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "76814a59",
+   "id": "a5c1713f",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "300d987e",
+   "id": "5d05b885",
    "metadata": {},
    "source": [
     "## Step 3. 모델 구성\n"
@@ -1678,7 +1677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36595a13",
+   "id": "de5a7594",
    "metadata": {},
    "source": [
     "### 3.1 Evaluation Metric"
@@ -1686,7 +1685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0e98a1",
+   "id": "4d0e3a77",
    "metadata": {},
    "source": [
     "MRR, Recall 함수 구현"
@@ -1695,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6f13c35c",
+   "id": "12a51db2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,7 +1713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0db22177",
+   "id": "350c4e1b",
    "metadata": {},
    "source": [
     "### 3.2 Model Architecture"
@@ -1723,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6d1a4677",
+   "id": "02b2bd7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b302752",
+   "id": "cd8cd0c7",
    "metadata": {},
    "source": [
     "모델 만드는 함수"
@@ -1748,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b1ccb9ef",
+   "id": "6c6adb49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9378754b",
+   "id": "215fd2ef",
    "metadata": {},
    "source": [
     "hyper-parameter 관리 Class"
@@ -1774,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c238929a",
+   "id": "59c51c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1797,7 +1796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3abdf6b6",
+   "id": "3c7855b4",
    "metadata": {},
    "source": [
     "훈련 모델 설계"
@@ -1806,7 +1805,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5c434c18",
+   "id": "fcb21d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1867,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "38a1bc6f",
+   "id": "5ad8f55f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56c3a6f",
+   "id": "2c1f6e40",
    "metadata": {},
    "source": [
     "## Step 4. 모델 학습\n",
@@ -1890,7 +1889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32538ecd",
+   "id": "073acd1e",
    "metadata": {},
    "source": [
     "첫번째 모델 학습\n",
@@ -1904,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2b617db2",
+   "id": "a7de9bde",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13156e3",
+   "id": "cce416ce",
    "metadata": {},
    "source": [
     "두번째 모델 학습\n",
@@ -2129,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8a5a9b68",
+   "id": "60329ebc",
    "metadata": {},
    "outputs": [
     {
@@ -2340,7 +2339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fae0c1a",
+   "id": "c4d9dbf9",
    "metadata": {},
    "source": [
     "세번째 모델 학습\n",
@@ -2354,7 +2353,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "59e045b1",
+   "id": "cce6bd26",
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc9eb0f",
+   "id": "005a54b8",
    "metadata": {},
    "source": [
     "네번째 모델 학습\n",
@@ -2579,7 +2578,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "8cad5062",
+   "id": "ffc07608",
    "metadata": {
     "scrolled": false
    },
@@ -2792,7 +2791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ebeeb31",
+   "id": "22727fe0",
    "metadata": {},
    "source": [
     "### **Step 5. 모델 테스트**\n",
@@ -2804,7 +2803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b1cb310",
+   "id": "8aabd316",
    "metadata": {},
    "source": [
     "첫번째 모델 평가\n",
@@ -2818,7 +2817,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f24db64c",
+   "id": "e77cfc64",
    "metadata": {},
    "outputs": [
     {
@@ -2851,7 +2850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e7f7c0",
+   "id": "35db24b5",
    "metadata": {},
    "source": [
     "두번째 모델 평가\n",
@@ -2862,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4f8f9e45",
+   "id": "5693c48c",
    "metadata": {},
    "outputs": [
     {
@@ -2895,7 +2894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef370f04",
+   "id": "745a5b2f",
    "metadata": {},
    "source": [
     "세번째 모델 평가\n",
@@ -2906,7 +2905,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "53298963",
+   "id": "2f44c992",
    "metadata": {},
    "outputs": [
     {
@@ -2939,7 +2938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5173d5fc",
+   "id": "30607ea2",
    "metadata": {},
    "source": [
     "네번째 모델 평가\n",
@@ -2950,7 +2949,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "23bee468",
+   "id": "8feded6f",
    "metadata": {},
    "outputs": [
     {
@@ -2983,7 +2982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fffebb4d",
+   "id": "5ca22368",
    "metadata": {},
    "source": [
     "## 회고\n",
