--- a/GoingDeeper/[GD-14] Face Detector.ipynb
+++ b/GoingDeeper/[GD-14] Face Detector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "afa4e0a0",
+   "id": "c2d63486",
    "metadata": {},
    "source": [
     "# [GD-14] Let's put a sticker on someone far away"
@@ -15,7 +15,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a04b6f6e",
+   "id": "5020373e",
    "metadata": {},
    "source": [
     "## 1.Intro\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4b5aa74",
+   "id": "4fb7b517",
    "metadata": {},
    "source": [
     "## 2. 데이터셋 전처리(1) 분석\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cebe96e6",
+   "id": "80157e08",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7cc2b17",
+   "id": "362db463",
    "metadata": {},
    "source": [
     "**`WIDER_xxxx` 로 되어 있는 3개의 디렉토리에는 입력용 이미지 파일 존재**\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81ea83ae",
+   "id": "3cbebba9",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a6a3ef",
+   "id": "d16d195e",
    "metadata": {},
    "source": [
     "#### 2.2.3 필요한 라이브러리와 전역 변수를 준비"
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75a7f593",
+   "id": "a3e995f2",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df8e23ab",
+   "id": "a5dcdf9e",
    "metadata": {},
    "source": [
     "#### 2.2.4 Bounding Box 분석"
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fbe9d440",
+   "id": "a5300218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "648a60d7",
+   "id": "15fa7b2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d16aead",
+   "id": "07f1eb27",
    "metadata": {},
    "source": [
     "#### 2.2.5 추출된 Bounding Box 정보를 실제 이미지 정보와 결합\n",
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2ed13aed",
+   "id": "d1a6bb3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "39eed3fe",
+   "id": "978f4403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "40ce8774",
+   "id": "09fbe77d",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24706d54",
+   "id": "86217fa6",
    "metadata": {},
    "source": [
     "## **3. 데이터셋 전처리(2) TFRecord 생성**\n",
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d5606fc9",
+   "id": "47d5a574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e1fef97",
+   "id": "08f5eeb4",
    "metadata": {},
    "source": [
     "#### 3.1.2 TFRecord 파일 생성\n",
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eef13bbc",
+   "id": "cc2b5a78",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3c36f63d",
+   "id": "26c9bba2",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "0a565b3a",
+   "id": "6b504420",
    "metadata": {},
    "source": [
     "## **4. 모델 구현(1) Default boxes**\n",
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd2c6dad",
+   "id": "0a0d3dd6",
    "metadata": {},
    "source": [
     "#### 4.1.1 default box 정보를 전역 변수로 만들기"
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1a05cc73",
+   "id": "57e6ac78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "222ebd63",
+   "id": "ccc5ebce",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8267cf7d",
+   "id": "40e0c791",
    "metadata": {},
    "source": [
     "#### 4.1.2 feature map을 만들고 그에 연결된 default box를 생성"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c77aff2a",
+   "id": "d5ec70b1",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2b0e0a2b",
+   "id": "b584a17d",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "69a48f70",
+   "id": "8db51268",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0412d210",
+   "id": "d4a1f4a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2458eda",
+   "id": "d62eba0e",
    "metadata": {},
    "source": [
     "## **5. 모델 구현(2) SSD**\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c263e7e0",
+   "id": "581393c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abdc67f4",
+   "id": "1eddacc4",
    "metadata": {},
    "source": [
     "#### 5.1.2 Depthwise Convolution 블록"
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b279e33b",
+   "id": "0f052d29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b5fd1c7",
+   "id": "246019e9",
    "metadata": {},
    "source": [
     "#### 5.1.3 skip connection으로 쓰일 Branch 블록"
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "16acc01f",
+   "id": "13bc1a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd4af66",
+   "id": "eabb9c6a",
    "metadata": {},
    "source": [
     "#### 5.1.4 **Branch 부분에 헤드(head) 라고 불리는 Convolution 레이어를 붙이기**\n",
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "15db0bf0",
+   "id": "ac2ff6ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3fbb4e0e",
+   "id": "c05c38e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8894db0",
+   "id": "023831c7",
    "metadata": {},
    "source": [
     "### 5.2 SSD mode build\n",
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0f06db29",
+   "id": "85b12df1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "40e209f3",
+   "id": "a731df63",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b95bc40a",
+   "id": "97b5a93c",
    "metadata": {},
    "source": [
     "## **6. 모델 학습(1) Augmentation, jaccard 적용**\n",
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9adacbc",
+   "id": "efd8d6a6",
    "metadata": {},
    "source": [
     "#### 6.1.1 crop 함수 \n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ba49a8a1",
+   "id": "2fd5527d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a7b0762",
+   "id": "d0b51fb6",
    "metadata": {},
    "source": [
     "#### 6.1.2 resize 함수\n",
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c8c4b3ec",
+   "id": "9d829fda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44d3ff8f",
+   "id": "4aa27ae5",
    "metadata": {},
    "source": [
     "#### 6.1.3 flip함수\n",
@@ -1361,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "58e020ba",
+   "id": "37081808",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f4e3ae",
+   "id": "69bc10aa",
    "metadata": {},
    "source": [
     "#### 6.1.4 이미지 정사각형으로 만드는 함수\n",
@@ -1396,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7d33a359",
+   "id": "acd44b38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52d1b6fa",
+   "id": "72a37504",
    "metadata": {},
    "source": [
     "#### 6.1.5 이미지 색상 값을 바꿔주는 함수"
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "106e4a93",
+   "id": "136162de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f6a10d",
+   "id": "a41f306b",
    "metadata": {},
    "source": [
     "### 6.2 **Default box 적용**\n",
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "41d407e1",
+   "id": "1c8bf4f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "085cc129",
+   "id": "fc74a74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1790a6",
+   "id": "f072d75f",
    "metadata": {},
    "source": [
     "#### 6.2.2 TFRecord 데이터셋의 라벨을 가공\n",
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0bc514bf",
+   "id": "84e90752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "75e27ac1",
+   "id": "0ab5a44f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ba977d6",
+   "id": "223c1cc5",
    "metadata": {},
    "source": [
     "### **6.3 최종 load_dataset**\n",
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a8c80341",
+   "id": "badfae2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2831ecbf",
+   "id": "924f14ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cc111770",
+   "id": "9e40a5f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1e5462ea",
+   "id": "b79ca348",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92145c38",
+   "id": "39be463e",
    "metadata": {},
    "source": [
     "## ****7. 모델 학습(2) train****\n",
@@ -1737,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "64b7b654",
+   "id": "0b16ea30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "7a9a928c",
+   "id": "7ae091d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1b4cf31",
+   "id": "3b516366",
    "metadata": {},
    "source": [
     "### 7.2 **Hard negative mining을 이용한 localization loss를 classification loss 추가 반영**\n",
@@ -1831,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7c6c09ad",
+   "id": "94181fee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1851,7 +1851,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "33b48489",
+   "id": "52e7628e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "395c2327",
+   "id": "a8a50f36",
    "metadata": {},
    "source": [
     "### 7.3 **Training**\n",
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e4628014",
+   "id": "3f889356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf19253",
+   "id": "ea23eb93",
    "metadata": {},
    "source": [
     "#### 7.3.2 모델 생성 & 모델 구조 보기\n",
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8bf5a887",
+   "id": "bbc0ea28",
    "metadata": {
     "collapsed": true
    },
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd35ae9",
+   "id": "e0a43f7f",
    "metadata": {},
    "source": [
     "#### 7.3.3 학습에 필요한 나머지 요소들 정의"
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "aebe36d5",
+   "id": "4990dcf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb845ab",
+   "id": "6ae230ba",
    "metadata": {},
    "source": [
     "#### 7.3.4 학습\n",
@@ -2227,7 +2227,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "82470b93",
+   "id": "20555a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b1cf33de",
+   "id": "91a806e5",
    "metadata": {},
    "outputs": [
     {
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76798818",
+   "id": "77233127",
    "metadata": {},
    "source": [
     "## ****8. inference(1) NMS****\n",
@@ -2296,7 +2296,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "88a9aaae",
+   "id": "c81aff2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b606a43",
+   "id": "bd4543e3",
    "metadata": {},
    "source": [
     "#### 8.1.2 모델의 예측 결과를 디코딩"
@@ -2341,7 +2341,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0830e876",
+   "id": "84ed757b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2354,7 +2354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b8c5e87",
+   "id": "deacdcd9",
    "metadata": {},
    "source": [
     "#### 8.1.3 모델의 예측 결과를 해석해주는 함수\n",
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "58f2cbe8",
+   "id": "f2adf5f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2413,7 +2413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09defa8b",
+   "id": "74b48579",
    "metadata": {},
    "source": [
     "## **9. inference(2) 사진에서 얼굴 찾기**\n",
@@ -2432,7 +2432,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "68353235",
+   "id": "23852848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee1715e",
+   "id": "7f384749",
    "metadata": {},
    "source": [
     "#### 9.1.2 이미지 패딩을 제거해주는 함수"
@@ -2467,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "66645f7a",
+   "id": "8e0e901f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a583b5c7",
+   "id": "b4a1456e",
    "metadata": {},
    "source": [
     "#### 9.1.3 최종 결과를 시각화 할 수 있도록 이미지에 box를 그려주는 함수\n",
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "33664fa5",
+   "id": "a8d15a1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2522,7 +2522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed735ad",
+   "id": "8fd7c70a",
    "metadata": {},
    "source": [
     "### 9.2 시각화\n",
@@ -2537,7 +2537,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3d3a6f8a",
+   "id": "f9d987d2",
    "metadata": {},
    "outputs": [
     {
@@ -2586,7 +2586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8359c7",
+   "id": "71e67275",
    "metadata": {},
    "source": [
     "## 10. 스티커 합성 사진 생성하기"
@@ -2595,7 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "6f5f65ef",
+   "id": "0fc5ccf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2652,7 +2652,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "8ab0d51c",
+   "id": "8408a6de",
    "metadata": {},
    "outputs": [
     {
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3c9fb4",
+   "id": "af8c57f6",
    "metadata": {},
    "source": [
     "## 회고\n",
@@ -2718,7 +2718,7 @@
     "- 루브릭 평가 지표를 맞추기 위해 **시도한 것들**.\n",
     "    - epoch100번을 돌렸는 데, 생각보다 정확하지는 않은 것 같다.\n",
     "    - callback을 이용해서 좋은 weights를 저장했으면 좋았을 것 같은데.. 노드의 훈련방식의 어디에 callback을 적용해야 할 지 모르겠다.\n",
-    "    - 시간을 측정하는 것도 중요한 데, 많이 훈련해서 좋은 weight를 이용할 수 있게 loss에 대한 기록이 남을 수 있게 했었으면 좋은 weight를 선택할 수 있게 되어서 더 좋았을 것 같다.\n",
+    "    - 시간을 측정하는 것도 중요한 데, 많이 훈련해서 좋은 weight를 이용할 수 있게 loss에 대한 기록이 남을 수 있게 했었으면 좋은 weight를 선택할 수 있게 되었으면 더 좋았을 것 같다.\n",
     " \n",
     "\n",
     "- **자기 다짐**\n",
